Final Commit before the presentation

--- a/Sharpening_ECOSTRESS_S2.ipynb
+++ b/Sharpening_ECOSTRESS_S2.ipynb
@@ -995,7 +995,7 @@
         "\n",
         "cv0 = frames[0]\n",
         "im = ax.imshow(cv0,cmap=custom_cmap) \n",
-        "cb = fig.colorbar(im, cax=cax)\n",
+        "cb = fig.colorbar(im, cax=cax,label ='Land Surface temperature (K)')\n",
         "tx = ax.set_title(title_from_file(files_sharpened[i]))\n",
         "\n",
         "def animate(i):\n",
