--- a/Sharpening_ECOSTRESS_S2_API.ipynb
+++ b/Sharpening_ECOSTRESS_S2_API.ipynb
@@ -368,7 +368,7 @@
     "dirs = [d for d in os.listdir(s2_output_folder)]\n",
     "\n",
     "most_recent_dir = max(dirs, key=lambda d: os.path.getmtime(os.path.join(s2_output_folder, d)))\n",
-    "timestamp = datetime.datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
     "new_name = f\"S2_request_{timestamp}\"\n",
     "old_path = os.path.join(s2_output_folder, most_recent_dir)\n",
     "new_path = os.path.join(s2_output_folder, new_name)\n",
@@ -717,7 +717,6 @@
    "source": [
     "useDecisionTree = True # You could change this to False if you want to use the Neural Network intead of the Decision tree, not recommended\n",
     "files_sharpened = [] # list of the files sharpened\n",
-    "dst_dir = r'C:\\Users\\qdehaene\\Documents\\Data\\New cloud version'\n",
     "dst_dir_f= os.path.join(dst_dir,task_name,'Results')\n",
     "# Loop through the directory of LST images scaled\n",
     "for file in os.listdir(lst_dir_sc) :\n",
@@ -1065,7 +1064,7 @@
     "\n",
     "cv0 = frames[0]\n",
     "im = ax.imshow(cv0,cmap=custom_cmap) \n",
-    "cb = fig.colorbar(im, cax=cax)\n",
+    "cb = fig.colorbar(im, cax=cax,label ='Land Surface temperature (K)')\n",
     "tx = ax.set_title(title_from_file(files_sharpened[i]))\n",
     "\n",
     "def animate(i):\n",
