Updated code, readme, requirements, and folder name for tutorial

--- a/Sharpening_ECOSTRESS_S2.ipynb
+++ b/Sharpening_ECOSTRESS_S2.ipynb
@@ -86,7 +86,7 @@
         "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
         "import matplotlib.animation as animation\n",
         "from matplotlib import rc\n",
-        "from pyDMS_master.run_pyDMS import *\n",
+        "from pyDMS_main.run_pyDMS import *\n",
         "\n",
         "# If you recieve a No module named '...' error, it is likely because you haven't installed all the necessary packages (cf tutorial)"
       ]
