--- a/Sharpening_ECOSTRESS_S2_API.ipynb
+++ b/Sharpening_ECOSTRESS_S2_API.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import matplotlib.animation as animation\n",
     "from matplotlib import rc\n",
-    "from pyDMS_master.run_pyDMS import *\n",
+    "from pyDMS_main.run_pyDMS import *\n",
     "# If you recieve a No module named '...' error, it is likely because you haven't installed all the necessary packages (cf tutorial)"
    ]
   },
@@ -135,20 +135,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Insert your logs for the OAuth Copernicus Data Space created above."
+    "OAuth Copernicus Data Space"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = SHConfig()\n",
     "config.sh_base_url = 'https://sh.dataspace.copernicus.eu'\n",
     "config.sh_token_url = 'https://identity.dataspace.copernicus.eu/auth/realms/CDSE/protocol/openid-connect/token'\n",
-    "config.sh_client_id ='' # type you client id\n",
-    "config.sh_client_secret ='' # type your client secret"
+    "config.sh_client_id = os.getenv('OAUTH_CLIENT_ID') # Alternatively you can type you client id\n",
+    "config.sh_client_secret = os.getenv('OAUTH_CLIENT_SECRET') # Alternatively you can type your client secret"
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,11 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose your output folder for the downloaded Sentinel-2 products (a new folder named task_name will be created) \n",
+    "# Choose your output folder for the downloaded Sentinel-2 products\n",
     "s2_output_folder = r''\n",
     "# The task name you enter here is the name of the AppEEARS request. Your S2 request will also be named accordingly for harmonization. \n",
     "task_name = input('Enter a Task Name: ')\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
     "# Choose the resolution of the Sentinel data in meters 10 or 20, this will be the final resolution of the downscaled image. I would advise 20m at all times until further progress.\n",
     "s2_res = 20\n",
     "# Set the desired collection for the ECOSTRESS product to be downloaded (1 or 2). Pay attention Collection 2 hasn't been reprocessed for the full years of service of ECOSTRESS \n",
-    "eco_collec = 2 \n",
+    "eco_collec = 1 \n",
     "\n",
     "# Choose your time interval (beginning, end) in the format (YYYY-MM-DD). You'll get a S2 image from the tile with the lowest cloud coverage available in the interval and all the ECOSTRESS scences overpassing the AOI during this interval : \n",
     "interval = (\"2023-07-01\", \"2023-08-31\") # example\n",
@@ -387,7 +387,9 @@
    "source": [
     "### Dowloading ECOSTRESS scenes\n",
     "\n",
-    "This part is based off the ECOSTRESS API tutorials available [here](https://github.com/nasa/AppEEARS-Data-Resources/tree/main/Python/tutorials)."
+    "This part is based off the ECOSTRESS API tutorials available [here](https://github.com/nasa/AppEEARS-Data-Resources/tree/main/Python/tutorials).\n",
+    "\n",
+    "Authentication and Token Retrieval for NASA AppEEARS API"
    ]
   },
   {
@@ -516,6 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ping the API\n",
     "Ping the API every 30 seconds until the request is complete to display the status. It may occur that AppEEARS is slow to process data, I suggest to simply wait and come back later.  "
    ]
   },
@@ -717,7 +720,7 @@
    "source": [
     "useDecisionTree = True # You could change this to False if you want to use the Neural Network intead of the Decision tree, not recommended\n",
     "files_sharpened = [] # list of the files sharpened\n",
-    "dst_dir_f= os.path.join(dst_dir,task_name,'Results')\n",
+    "dst_dir_f= os.path.join(dst_dir, f\"{task_name}-Results\")\n",
     "# Loop through the directory of LST images scaled\n",
     "for file in os.listdir(lst_dir_sc) :\n",
     "    if file.endswith('.tif') :\n",
@@ -836,7 +839,7 @@
     "useDecisionTree = True # You could change this to False if you want to use the Neural Network intead of the Decision tree, not recommended\n",
     "\n",
     "files_sharpened = [] #list of the files sharpened\n",
-    "dst_dir_f = os.path.join(dst_dir,task_name,'Results')\n",
+    "dst_dir_f = os.path.join(dst_dir, f\"{task_name}-Results\")\n",
     "# Loop through the directory of LST images\n",
     "for file in os.listdir(lst_dir_sc) :\n",
     "    if file.endswith('.tif') :\n",
@@ -993,7 +996,7 @@
    "source": [
     "# Pick one random sharpened file\n",
     "file = random.choice(files_sharpened)\n",
-    "sharpened_file = os.path.join(dst_dir,file.replace('.tif','_sharp_S2.tif'))\n",
+    "sharpened_file = os.path.join(dst_dir_f,file.replace('.tif','_sharp_S2.tif'))\n",
     "raw_file = os.path.join(lst_dir_sc,file)\n",
     "with rasterio.open(raw_file,'r') as lr_img : \n",
     "    raw_lst = lr_img.read(1)\n",
@@ -1017,74 +1020,11 @@
     "plt.title(\"ECOSTRESS LST sharpened to 30m\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create an animation of all the sharpened scenes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def title_from_file(filename):\n",
-    "  time_info = filename.split('_')[4][3:]\n",
-    "  dt = datetime.strptime(time_info, '%Y%j%H%M%S')\n",
-    "\n",
-    "  formatted_datetime = dt.strftime('%Y-%m-%d at %I:%M %p (UTC)')\n",
-    "  title = f\"Land Surface Temperature (K)  {formatted_datetime} \"\n",
-    "\n",
-    "  return title\n",
-    "\n",
-    "\n",
-    "# Animation creation\n",
-    "rc('animation', html='jshtml')\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111)\n",
-    "\n",
-    "div = make_axes_locatable(ax)\n",
-    "cax = div.append_axes('right', '5%', '5%')\n",
-    "\n",
-    "LST_sharpened_rasters = [rxr.open_rasterio(os.path.join(dst_dir_f,file.replace('.tif','_sharp_S2.tif'))).squeeze(\"band\", drop=True) for file in files_sharpened]\n",
-    "print([os.path.join(dst_dir_f,file.replace('.tif','_sharp_S2.tif')) for file in files_sharpened])\n",
-    "custom_cmap = plt.colormaps['rainbow'].copy()\n",
-    "custom_cmap.set_under('black')\n",
-    "\n",
-    "\n",
-    "frames = []\n",
-    "for i in range(len(LST_sharpened_rasters)):\n",
-    "  LST_data = LST_sharpened_rasters[i].values\n",
-    "  lst_min = LST_data.min()\n",
-    "  np.nan_to_num(LST_data,copy = False)\n",
-    "  frames.append(LST_data)\n",
-    "\n",
-    "cv0 = frames[0]\n",
-    "im = ax.imshow(cv0,cmap=custom_cmap) \n",
-    "cb = fig.colorbar(im, cax=cax,label ='Land Surface temperature (K)')\n",
-    "tx = ax.set_title(title_from_file(files_sharpened[i]))\n",
-    "\n",
-    "def animate(i):\n",
-    "  arr = frames[i]\n",
-    "  vmax     = np.max(arr[arr>0.0])\n",
-    "  vmin     = np.min(arr[arr>0.0])\n",
-    "  im.set_data(arr)\n",
-    "  im.set_clim(vmin, vmax)\n",
-    "  tx.set_text(title_from_file(files_sharpened[i]))\n",
-    "  return im,tx\n",
-    "\n",
-    "\n",
-    "ani = animation.FuncAnimation(fig, animate, frames=len(files_sharpened),interval=1000, blit=True, repeat_delay=5000)\n",
-    "ani"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jvsrp_main",
+   "display_name": "ECOSTRESS",
    "language": "python",
    "name": "python3"
   },
@@ -1098,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
