Made updates to dotenv

--- a/Sharpening_ECOSTRESS_S2_API.ipynb
+++ b/Sharpening_ECOSTRESS_S2_API.ipynb
@@ -94,6 +94,7 @@
     "import matplotlib.animation as animation\n",
     "from matplotlib import rc\n",
     "from pyDMS_main.run_pyDMS import *\n",
+    "from dotenv import load_dotenv\n",
     "# If you recieve a No module named '...' error, it is likely because you haven't installed all the necessary packages (cf tutorial)"
    ]
   },
@@ -147,6 +148,7 @@
     "config = SHConfig()\n",
     "config.sh_base_url = 'https://sh.dataspace.copernicus.eu'\n",
     "config.sh_token_url = 'https://identity.dataspace.copernicus.eu/auth/realms/CDSE/protocol/openid-connect/token'\n",
+    "load_dotenv()\n",
     "config.sh_client_id = os.getenv('OAUTH_CLIENT_ID') # Alternatively you can type you client id\n",
     "config.sh_client_secret = os.getenv('OAUTH_CLIENT_SECRET') # Alternatively you can type your client secret"
    ]
