Added import for dotenv

--- a/Sharpening_ECOSTRESS_S2.ipynb
+++ b/Sharpening_ECOSTRESS_S2.ipynb
@@ -87,6 +87,7 @@
     "import matplotlib.animation as animation\n",
     "from matplotlib import rc\n",
     "from pyDMS_main.run_pyDMS import *\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "# If you recieve a No module named '...' error, it is likely because you haven't installed all the necessary packages (cf tutorial)"
    ]
